Fixed more bugs with clip resizing (the width was a bit glitchy during resize). Fixed the position of keyframe points on the timeline. Fixed a bug where dragging the left edge of a clip past 0.0 would move the clip. Also fixed some rounding issues which made the preview jumpy during resize.

--- a/src/timeline/media/css/main.css
+++ b/src/timeline/media/css/main.css
@@ -50,7 +50,7 @@ img {
 .marker {position:absolute; top:30px;}
 
 /* Clips */
-.clip_top { display: -webkit-flex; background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.20)), color-stop(100%,rgba(255,255,255,0))); border-radius: 8px; }
+.clip_top { display: -webkit-flex; background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.20)), color-stop(100%,rgba(255,255,255,0))); border-radius: 8px; overflow: hidden; }
 .clip_menu { cursor: pointer; display: -webkit-flex; float:left;margin-top:4px;margin-left:4px;margin-right:4px;min-width:12px;height:12px; background-image: url(../images/menu.png);}
 .clip_menu:hover { background-image: url(../images/menu_hover.png); }
 .clip_label { cursor: move; min-width: 0px; float:left; margin-left: 2px; color:#fff;font-weight:bold; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
@@ -89,7 +89,7 @@ img {
 }
 
 /* Transitions */
-.transition_top { background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.75)), color-stop(100%,rgba(255,255,255,0))); border-radius: 8px; }
+.transition_top { background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.75)), color-stop(100%,rgba(255,255,255,0))); border-radius: 8px; overflow: hidden;}
 .transition { cursor: move; z-index:8000; color: #fff; min-width:0px; height: 64px; position: absolute; margin-top:0px; left: 100px; font-family: Sans; font-size: 9pt; background-color: #0192c; background: -webkit-linear-gradient(top, #0192c1 0%,#3fa1bf 100%); border-radius: 8px; border: 1px solid #0192c1; border-left: 2px solid #0192c1; border-right: 2px solid #0192c1; background-image: url(../images/transition.png); background-repeat: no-repeat; background-position: center; background-size: 100% 66px; opacity:0.75; box-shadow: 0px 0px 10px #000; box-sizing: border-box; }
 .transition_menu { cursor: pointer; float:left;margin-top:4px;margin-left:4px;margin-right:4px;width:12px;height:12px;background-image: url(../images/menu.png);}
 .transition_menu:hover { background-image: url(../images/menu_hover.png); }
